logs/tracbacklog.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/TracBacklog-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/backlog'...
Listing './lib/python3.5/site-packages/backlog/htdocs'...
Listing './lib/python3.5/site-packages/backlog/htdocs/css'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js/dijit'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js/dijit/_base'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js/dijit/themes'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js/dijit/themes/tundra'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js/dijit/themes/tundra/images'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js/dojo'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js/dojo/date'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js/dojo/dnd'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js/dojo/fx'...
Listing './lib/python3.5/site-packages/backlog/htdocs/js/dojo/resources'...
Listing './lib/python3.5/site-packages/backlog/templates'...
Compiling './lib/python3.5/site-packages/backlog/web_ui.py'...
***   File "./lib/python3.5/site-packages/backlog/web_ui.py", line 311
    print traceback.print_exc()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
